k8s/mailpit-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailpit
  namespace: oficina-mecanica
spec:
  type: ClusterIP
  selector:
    app: mailpit
  ports:
    - port: 1025
      targetPort: 1025
      name: smtp
    - port: 8025
      targetPort: 8025
      name: http
