k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oficina-mecanica-api
  namespace: oficina-mecanica
spec:
  type: ClusterIP
  selector:
    app: oficina-mecanica-api
  ports:
    - port: 8080
      targetPort: 8080
